--- a/public/resources/styles/main.css
+++ b/public/resources/styles/main.css
@@ -31,8 +31,8 @@ body{
 .snake-dots-1
 {
   position: absolute;
-  width: 4%;
-  height: 4%;
+  width: 20px;
+  height: 20px;
   background-color: #89b03d;
   padding: 0;
   margin: 0;
@@ -40,8 +40,8 @@ body{
 .snake-dots-2
 {
   position: absolute;
-  width: 4%;
-  height: 4%;
+  width: 20px;
+  height: 20px;
   background-color: #596e37;
   margin: 0;
   padding: 0;
@@ -51,8 +51,8 @@ body{
 .food
 {
   position: absolute;
-  width: 4%;
-  height: 4%;
+  width: 20px;
+  height: 20px;
   box-shadow: 0 0 30px 0 #f73e41;
   background-color: #f73e41;
 }
